tests/negative/export1_a.toit
// Copyright (C) 2018 Toitware ApS. All rights reserved.

bar:
  return "unused"
